feat: console ui
